--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ keywords = ["speech", "jax"]
 
 # pip dependencies of the project
 dependencies = [
+  "einops>=0.5.0",
   "flax>=0.6.1",
   "jax>=0.3.21",
 ]
