The first part of the lattices module: Public methods for sequence level operations
PiperOrigin-RevId: 487387163

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ repository = "https://github.com/google-research/last"
 dev = [
   "absl-py",
   "numpy",
+  "optax",
   "pytest",
   "pytest-xdist",
   "pylint>=2.6.0",
