--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -18,3 +18,8 @@ formats:
 python:
   install:
     - requirements: docs/requirements.txt
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
